--- a/source/stylesheets/icons.scss
+++ b/source/stylesheets/icons.scss
@@ -3,17 +3,18 @@
   font-size: 0.9em;
 }
 
-.index0 {
-  .glyphicon {
-    float: right;
-    margin-left: 8px;
-  }
+.index0 .glyphicon, .index1 .glyphicon {
+  float: left;
+  margin-right: 8px;
 }
 
-.index1 {
-  .glyphicon {
-    float: left;
-    margin-right: 8px;
+.index0 {
+  @media (min-width: 990px) {
+    .glyphicon {
+      float: right;
+      margin-left: 8px;
+      margin-right: 0px;
+    }
   }
 }
 
